<resources>
    <string name="app_name">ToDoApp</string>
    <string name="todo_list">Lista zadań</string>
    <string name="category">Kategoria</string>
    <string name="settings">Ustawienia</string>
    <string name="hidden">Zakończone zadania</string>
    <string name="notification">Powiadomienia z wyprzedzeniem (min)</string>
    <string name="save">Zapisz</string>
    <string name="done">Zakończone</string>
    <string name="notifications">Powiadomienia</string>
    <string name="add_attachment">Dodaj załącznik</string>
    <string name="title">Tytuł</string>
    <string name="todo_note">Opis zadania</string>
    <string name="set_end_time">Ustaw datę zakończenia</string>
    <string name="channel_id">my_channel_id</string>
</resources>