<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <ImageView
                android:id="@+id/img_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:padding="8dp"
                app:srcCompat="@drawable/baseline_check_24" />

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toLeftOf="@+id/img_check"
                android:padding="8dp"
                app:srcCompat="@drawable/baseline_delete_24" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
<!--    https://stackoverflow.com/questions/38604157/android-date-time-picker-in-one-dialog-->
    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/title"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <LinearLayout
        android:id="@+id/big_line_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/et_btnAddAttachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_attachment"
            android:layout_weight="1"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/et_setEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_end_time"
            android:layout_weight="1"
            android:drawableLeft="@drawable/baseline_access_time_filled_24"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/big_line_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/big_line_two"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/category"
                android:layout_marginBottom="5dp"
                />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/category_names" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Switch
                android:id="@+id/et_isDoneSwitch"
                android:text="@string/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/et_notificationSwitch"
                android:text="@string/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/et_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/todo_note"
        android:inputType="textMultiLine"
        android:lineSpacingMultiplier="1.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_title"
        app:layout_constraintStart_toStartOf="@+id/et_title"
        app:layout_constraintTop_toBottomOf="@+id/big_line_one" />
</androidx.constraintlayout.widget.ConstraintLayout>